Changed RodaConstants so that actions use v2 roles